K/k8s-image-swapper-gN91WA7wWCwn4TP/k8s-image-swapper.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-k8s-image-swapper
  labels:
    helm.sh/chart: k8s-image-swapper-1.0.1
    app.kubernetes.io/name: k8s-image-swapper
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.1.0
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: k8s-image-swapper
    app.kubernetes.io/instance: release-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-k8s-image-swapper
  labels:
    helm.sh/chart: k8s-image-swapper-1.0.1
    app.kubernetes.io/name: k8s-image-swapper
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.1.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-image-swapper
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: dedc2a4767f4fc3adc7599af27c979c37b8f2e6ddac1c00f8f00eb89ebbe2c8f
      labels:
        app.kubernetes.io/name: k8s-image-swapper
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-k8s-image-swapper
      securityContext: {}
      containers:
        - name: k8s-image-swapper
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
            readOnlyRootFilesystem: true
          image: ghcr.io/estahn/k8s-image-swapper:1.1.0
          imagePullPolicy: IfNotPresent
          args:
            - --config=/.k8s-image-swapper.yaml
            - --tls-cert-file=/usr/local/certificates/cert
            - --tls-key-file=/usr/local/certificates/key
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: https
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /
              port: https
              scheme: HTTPS
          resources:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: release-name-k8s-image-swapper
              subPath: config.yaml
              mountPath: /.k8s-image-swapper.yaml
              readOnly: true
            - name: webhook-cert
              mountPath: /usr/local/certificates/
              readOnly: true
      volumes:
        - name: release-name-k8s-image-swapper
          configMap:
            name: release-name-k8s-image-swapper
        - name: webhook-cert
          secret:
            secretName: release-name-k8s-image-swapper
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-k8s-image-swapper
  labels:
    helm.sh/chart: k8s-image-swapper-1.0.1
    app.kubernetes.io/name: k8s-image-swapper
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.1.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: k8s-image-swapper.github.io
    failurePolicy: Ignore
    reinvocationPolicy: Never
    namespaceSelector: {}
    objectSelector: {}
    rules:
      - apiGroups:
          - '*'
        apiVersions:
          - '*'
        resources:
          - pods
        operations:
          - CREATE
          - UPDATE
    clientConfig:
      service:
        namespace: default
        name: release-name-k8s-image-swapper
        path: /webhook
    admissionReviewVersions:
      - v1beta1
    sideEffects: None
---
apiVersion: v1
kind: Pod
metadata:
  name: release-name-k8s-image-swapper-test-connection
  labels:
    helm.sh/chart: k8s-image-swapper-1.0.1
    app.kubernetes.io/name: k8s-image-swapper
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.1.0
    app.kubernetes.io/managed-by: Helm
  annotations:
    helm.sh/hook: test
spec:
  containers:
    - name: wget
      image: busybox
      command:
        - wget
      args:
        - release-name-k8s-image-swapper:443
  restartPolicy: Never
